<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/car_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <!--这是上面部分的布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="64">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <ImageView
                android:id="@+id/car_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/porsche"/>

            <ImageView
                android:id="@+id/car_pinpai_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/porche_biaozhi" />

            <TextView
                android:id="@+id/car_yixingshi_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_yixingshi_tv"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/car_baoyang_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_baoyang_tv"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"/>

        </FrameLayout>

    </LinearLayout>


    <!--这是下面部分的布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="36"
        android:weightSum="2"
        android:orientation="vertical">

        <!--这是下面的上面一行的布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <!--这是是否解锁车辆-->
            <LinearLayout
                android:id="@+id/car_lock_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:id="@+id/car_lock_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/car_lock"/>

                <TextView
                    android:id="@+id/car_door_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_door_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textColor="@color/A100"/>

                <TextView
                    android:id="@+id/car_engine_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_engie_tv"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/A100"/>

            </LinearLayout>

            <!--这是邮箱和油量-->
            <LinearLayout
                android:id="@+id/car_oil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/car_oil"/>

                <TextView
                    android:id="@+id/car_oil_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_oil_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textColor="@color/A100"/>

                <TextView
                    android:id="@+id/car_milesleft_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_milesleft_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <!--这是水箱，水温-->
            <LinearLayout
                android:id="@+id/car_water"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/car_water"/>

                <TextView
                    android:id="@+id/car_watertemperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_watertemperature_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textColor="@color/A100"/>

                <TextView
                    android:id="@+id/car_watercapacity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_watercapacity_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <!--这是汽车电瓶-->
            <LinearLayout
                android:id="@+id/car_battery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/car_battery"/>


                <TextView
                    android:id="@+id/car_battery_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_battery_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textColor="@color/A100"/>

                <TextView
                    android:id="@+id/car_batterytime_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_batterytime_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>


        <!--这下面的下一行的布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <!--这是胎压-->
            <LinearLayout
                android:id="@+id/car_tire"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/car_tire"/>

                <TextView
                    android:id="@+id/car_tire_location_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_tire_location_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/car_tire_pressure_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_tire_pressure_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp"
                    android:textColor="@color/A100"/>

            </LinearLayout>

            <!--这是发动机-->
            <LinearLayout
                android:id="@+id/car_engine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/car_engine"/>


                <TextView
                    android:id="@+id/car_engine_running_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_engine_running_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/car_engine_block_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_engine_block_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <!--这是机油量-->
            <LinearLayout
                android:id="@+id/car_engine_oil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/car_engine_oil"/>


                <TextView
                    android:id="@+id/car_engine_oil_remain_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_engine_oil_remain_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textColor="@color/A100"/>

                <TextView
                    android:id="@+id/car_engine_oil_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_engine_oil_time_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <!--这是底盘参数-->
            <LinearLayout
                android:id="@+id/car_down"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/background">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/car_chassis"/>

                <TextView
                    android:id="@+id/car_engine_chassis_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_engine_chassis_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/car_engine_chassis_structure_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_engine_chassis_structure_tv"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>