<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@color/background"
    tools:context="wlhwh.example.com.autodrive.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/avatar"
        android:src="@mipmap/ide_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/account_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account"
            android:paddingLeft="6dp"
            android:textSize="16sp"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:paddingLeft="6dp"
            android:textSize="16sp"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/A100"
        android:text="@string/login"
        android:textColor="@color/background"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_gravity="end"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>
</LinearLayout>
